@@ -2,6 +2,11 @@ fidoconfig 0.91
 ---------------
 
 ----- cvs ci ------
+Sat Feb 12 20:50:26 NOVT 2000
+max:
+* print error if LinkGrp, OptGrp & AccessGrp parsed before Link definition
+
+----- cvs ci ------
 Sat Feb 12 16:45:00 IZH 2000
 Georgi (patch from Nestyurkin Nikolay, 2:5020/3600):
 * added new keyword for htick:
